# video-clipper

./: CMakeLists.txt  Doxyfile  README.md  squark.pc.in
src/: bucket.cc  bucket.hh  debug.cc  debug.hh  squark.cc  squark.hh
